--- a/.drone.yml
+++ b/.drone.yml
@@ -3,6 +3,20 @@ build:
     image: nextcloudci/jsunit:1.0.6
     commands:
       - ./autotest-js.sh
+  sqlite-php5.4:
+    image: nextcloudci/php5.4:1.0.7
+    commands:
+      - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
+      - git submodule update --init
+      - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database sqlite --database-pass=''
+      - NOCOVERAGE=true ./autotest.sh sqlite
+  sqlite-php5.5:
+    image: nextcloudci/php5.5:1.0.7
+    commands:
+      - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
+      - git submodule update --init
+      - ./occ maintenance:install --database-name oc_autotest --database-user oc_autotest --admin-user admin --admin-pass admin --database sqlite --database-pass=''
+      - NOCOVERAGE=true ./autotest.sh sqlite
   sqlite:
     image: nextcloudci/php5.6:1.0.6
     commands:
