--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "backbone": "~1.2.3",
     "davclient.js": "https://github.com/evert/davclient.js.git",
     "es6-promise": "https://github.com/jakearchibald/es6-promise.git#~2.3.0",
-    "base64": "~0.3.0"
+    "base64": "~0.3.0",
+    "clipboard": "^1.5.12"
   }
 }
