--- a/.drone.yml
+++ b/.drone.yml
@@ -21,28 +21,28 @@ build:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - NOCOVERAGE=true ./autotest.sh sqlite
-  sqlite:
-    image: nextcloudci/php7.0:1.0.10
+  sqlite-php7.0:
+    image: nextcloudci/php7.0:1.0.9
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - NOCOVERAGE=true ./autotest.sh sqlite
-  mysql:
-    image: nextcloudci/php7.0:1.0.10
+  mysql-php5.6:
+    image: nextcloudci/php5.6:1.0.6
     commands:
       - sleep 15 # gives the database enough time to initialize
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - NOCOVERAGE=true ./autotest.sh mysql
-  postgres:
-    image: nextcloudci/php7.0:1.0.10
+  postgres-php5.6:
+    image: nextcloudci/php5.6:1.0.6
     commands:
       - sleep 10 # gives the database enough time to initialize
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
       - NOCOVERAGE=true ./autotest.sh pgsql
   integration:
-    image: nextcloudci/php7.0:1.0.10
+    image: nextcloudci/php7.0:1.0.9
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
