--- a/.drone.yml
+++ b/.drone.yml
@@ -3,44 +3,68 @@ build:
     image: nextcloudci/jsunit:1.0.6
     commands:
       - ./autotest-js.sh
+  nodb-php5.4:
+    image: nextcloudci/php5.4:1.0.7
+    commands:
+      - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
+      - git submodule update --init
+      - NOCOVERAGE=true TEST_SELECTION=NODB ./autotest.sh sqlite
+  nodb-php5.5:
+    image: nextcloudci/php5.5:1.0.7
+    commands:
+      - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
+      - git submodule update --init
+      - NOCOVERAGE=true TEST_SELECTION=NODB ./autotest.sh sqlite
+  nodb-php5.6:
+    image: nextcloudci/php5.6:1.0.6
+    commands:
+      - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
+      - git submodule update --init
+      - NOCOVERAGE=true TEST_SELECTION=NODB ./autotest.sh sqlite
+  nodb-php7.0:
+    image: nextcloudci/php7.0:1.0.9
+    commands:
+      - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
+      - git submodule update --init
+      - NOCOVERAGE=true TEST_SELECTION=NODB ./autotest.sh sqlite
   sqlite-php5.4:
     image: nextcloudci/php5.4:1.0.7
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - NOCOVERAGE=true ./autotest.sh sqlite
+      - NOCOVERAGE=true TEST_SELECTION=DB ./autotest.sh sqlite
   sqlite-php5.5:
     image: nextcloudci/php5.5:1.0.7
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - NOCOVERAGE=true ./autotest.sh sqlite
+      - NOCOVERAGE=true TEST_SELECTION=DB ./autotest.sh sqlite
   sqlite-php5.6:
     image: nextcloudci/php5.6:1.0.6
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - NOCOVERAGE=true ./autotest.sh sqlite
+      - NOCOVERAGE=true TEST_SELECTION=DB ./autotest.sh sqlite
   sqlite-php7.0:
     image: nextcloudci/php7.0:1.0.9
     commands:
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - NOCOVERAGE=true ./autotest.sh sqlite
+      - NOCOVERAGE=true TEST_SELECTION=DB ./autotest.sh sqlite
   mysql-php5.6:
     image: nextcloudci/php5.6:1.0.6
     commands:
       - sleep 15 # gives the database enough time to initialize
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - NOCOVERAGE=true ./autotest.sh mysql
+      - NOCOVERAGE=true TEST_SELECTION=DB ./autotest.sh mysql
   postgres-php5.6:
     image: nextcloudci/php5.6:1.0.6
     commands:
       - sleep 10 # gives the database enough time to initialize
       - rm -rf data/* config/config.php # TODO: remove this - temporary fix for CI issues
       - git submodule update --init
-      - NOCOVERAGE=true ./autotest.sh pgsql
+      - NOCOVERAGE=true TEST_SELECTION=DB ./autotest.sh pgsql
   integration:
     image: nextcloudci/php7.0:1.0.9
     commands:
