Use classmap to load core files
We can't use an authoritive classmap in the current state as it would
kill app loading. However we can use a proper classmap for the normal
core stuff.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "config" : {
-        "vendor-dir": "lib/composer"
+        "vendor-dir": "lib/composer",
+        "optimize-autoloader": true
     },
     "autoload" : {
         "psr-4": {
